finish2 commit